--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --bg-color: #fff;
-    --secondary-bg-color: #eeeeee;
+    --secondary-bg-color: #f7f7f7;
     --heading-color: #5f5f5f;
     --body-color: rgba(0, 0, 0, 0.7);
     --post-color: rgba(0, 0, 0, 0.44);
@@ -14,15 +14,15 @@
     --tag-color: #424242;
     --blockquote-text-color: #858585;
     --blockquote-border-color: #dfe2e5;
-    --hover-color: #c4686a;
-    --link-color: #a83f43;
+    --hover-color: #66afad;
+    --link-color: #8cc3c1;
     --thumbnail-height: 15em;
     scroll-padding-top: 100px;
 }
 
 html[data-theme='dark'] {
     --bg-color: #292a2d;
-    --secondary-bg-color: #2c2d32;
+    --secondary-bg-color: #323338;
     --heading-color: rgb(169, 169, 179);
     --body-color: rgb(169, 169, 179);
     --post-color: rgba(0, 0, 0, 0.44);
@@ -379,7 +379,7 @@ a:active {
 
 .post .post-content a {
     text-decoration: none;
-    font-weight: 500; /*TEST*/
+    font-weight: lighter; /*link weight*/
     color: var(--link-color);
 }
 
