--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
     --blockquote-border-color: #dfe2e5;
     --hover-color: #66afad;
     --link-color: #8cc3c1;
+    --button-hover-color: #eff7f6;
     --thumbnail-height: 15em;
     scroll-padding-top: 100px;
 }
@@ -34,6 +35,7 @@ html[data-theme='dark'] {
     --tag-color: rgb(191, 191, 191);
     --blockquote-text-color: #808080;
     --blockquote-border-color: #424242;
+    --button-hover-color: #2c3a3d;
 }
 
 html {
@@ -73,7 +75,11 @@ blockquote {
     border-radius: 3px;
     color: var(--tag-color) !important;
     background-color: var(--secondary-bg-color);
-    border: 1px solid var(--border-color);
+    
+}
+
+.category:hover {
+    background-color: var(--button-hover-color);
 }
 
 .tag::before {
@@ -298,7 +304,7 @@ a:active {
     text-transform: uppercase;
     font-size: 2rem;
     font-weight: 600;
-    letter-spacing: 2px;
+    letter-spacing: 1.9px;
     line-height: 1;
     margin: 1em;
 }
