comment policy and remove memoji

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -41,6 +41,7 @@
             {{- if .Site.Params.utterances.repo -}}
             <div id="fb_comments_container">
                 <h2>{{ i18n "comments" }}</h2>
+                <p>💬 I welcome and encourage constructive, respectful, and on-topic comments!</p>                
                 {{ partial "comments/utterances.html" . }}
             </div>
             {{- end -}}
