--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,43 +2,42 @@
 
 :root {
     --bg-color: #fff;
-    --secondary-bg-color: #f7f7f7;
-    --heading-color: #2B2B2B;
-    --body-color: #2B2B2B;
+    --secondary-bg-color: #eeeeee;
+    --heading-color: #5f5f5f;
+    --body-color: rgba(0, 0, 0, 0.7);
     --post-color: rgba(0, 0, 0, 0.44);
     --border-color: rgba(0, 0, 0, 0.15);
     --form-border-color: #9f9f9f;
     --form-button-hover-border-color: #000;
-    --pre-bg-color: #f9f9fd;
-    --nav-text-color: #262626;
+    --pre-bg-color: #f7f7f9;
+    --nav-text-color: #5a5a5a;
     --tag-color: #424242;
     --blockquote-text-color: #858585;
     --blockquote-border-color: #dfe2e5;
-    --hover-color: #277276;
-    --link-color: #2B8084;
-    --button-hover-color: #e0f4f5;
+    --hover-color: #738eb8;
+    --link-color: #5072a7;
+    --button-hover-color: #dce2ed;
     --thumbnail-height: 15em;
     scroll-padding-top: 100px;
 }
 
 html[data-theme='dark'] {
     --bg-color: #292a2d;
-    --secondary-bg-color: #323338;
+    --secondary-bg-color: #2c2d32;
     --heading-color: rgb(169, 169, 179);
     --body-color: rgb(169, 169, 179);
     --post-color: rgba(0, 0, 0, 0.44);
     --border-color: rgb(38, 38, 38);
     --form-border-color: rgb(169, 169, 179);
     --form-button-hover-border-color: #fff;
-    --pre-bg-color: rgb(33, 33, 45);
+    --pre-bg-color: rgb(53, 53, 60);
     --nav-text-color: rgb(191, 191, 191);
     --tag-color: rgb(191, 191, 191);
     --blockquote-text-color: #808080;
     --blockquote-border-color: #424242;
-    --button-hover-color: #486665 ;
-    --link-color: #4e9693;
-    --hover-color: #486665 ;
-
+    --hover-color: #738eb8;
+    --link-color: #849cc1;
+    --button-hover-color: #405b8540;
 }
 
 sup, sub {
