--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,21 +2,21 @@
 
 :root {
     --bg-color: #fff;
-    --secondary-bg-color: #eeeeee;
+    --secondary-bg-color: #f4f4f4;
     --heading-color: #5f5f5f;
     --body-color: rgba(0, 0, 0, 0.7);
     --post-color: rgba(0, 0, 0, 0.44);
     --border-color: rgba(0, 0, 0, 0.15);
     --form-border-color: #9f9f9f;
     --form-button-hover-border-color: #000;
-    --pre-bg-color: #f7f7f9;
+    --pre-bg-color: #f8f8f8;
     --nav-text-color: #5a5a5a;
     --tag-color: #424242;
     --blockquote-text-color: #858585;
     --blockquote-border-color: #dfe2e5;
     --hover-color: #738eb8;
     --link-color: #5072a7;
-    --button-hover-color: #dce2ed;
+    --button-hover-color: #edf0f6;
     --thumbnail-height: 15em;
     scroll-padding-top: 100px;
 }
