new post on parselmouth, t/f highlighting, and r import quotes

--- a/assets/css/markupHighlight.css
+++ b/assets/css/markupHighlight.css
@@ -87,6 +87,8 @@ html[data-theme='dark'] {
   --chr-kr-color: #66d9ef;
   --chr-kt-color: #66d9ef;
   --chr-n-color: #f8f8f2;
+  --chr-nb-color: #f8f8f2;
+  --chr-bp-color: #f8f8f2;
   --chr-nn-color: #f8f8f2;
   --chr-p-color: #f8f8f2;
   --chr-na-color: #a6e22e;
