finalizing search and archives

--- a/layouts/_default/search.html
+++ b/layouts/_default/search.html
@@ -5,7 +5,11 @@
     {{- if .Description }}
     <div class="post-description">
         <!-- {{ .Description }} -->
-        <p>If you'd rather browse thematically, you can explore <a href="/categories" style="text-decoration: underline">categories</a> I've tagged posts with.</p>
+        <p>
+            🧭 &nbsp;explore posts by thematic <a href="/categories" style="text-decoration: underline">categories</a> <br> 
+            📆 &nbsp;browse by date using the <a href="/archives" style="text-decoration: underline">archive</a> <br>
+            🧠 &nbsp;find me on <a href="https://twitter.com/khia_johnson/" style="text-decoration: underline">twitter</a> and try my brain
+        </p>
     </div>
     {{- end }}
     {{- if not (.Param "hideMeta") }}
