--- a/layouts/partials/index_profile.html
+++ b/layouts/partials/index_profile.html
@@ -6,6 +6,8 @@
             height="{{ .imageHeight | default 150 }}" width="{{ .imageWidth | default 150 }}" />
         {{- end }}
         <h1>{{ .title | default $.Site.Title | markdownify }}</h1>
+        <h5 style="margin-bottom: 0.75em;">(she/her/hers)</h5>
+        
         <span>{{ .subtitle | markdownify }}</span>
         {{- partial "social_icons.html" $.Site.Params.socialIcons -}}
 
