--- a/layouts/_default/search.html
+++ b/layouts/_default/search.html
@@ -7,7 +7,7 @@
     <div class="post-description">
         <!-- {{ .Description }} -->
         <p>
-            🧭 &nbsp;explore posts by thematic <a href="/categories" style="text-decoration: underline">categories</a> <br> 
+            🧭 &nbsp;explore posts by <a href="/tags" style="text-decoration: underline">tagged topics</a> <br> 
             📆 &nbsp;browse by date using the <a href="/archives" style="text-decoration: underline">archive</a> <br>
             🧠 &nbsp;find me on <a href="https://twitter.com/khia_johnson/" target="_blank" rel="noopener noreferrer" style="text-decoration: underline">twitter</a> and try my brain
         </p>
