--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,7 +7,8 @@
 {{- if not .IsHome | and .Title }}
 <header class="page-header">
   {{- partial "breadcrumbs.html" . }}
-  <h1>Blog posts</h1>
+  <h1>Blog</h1>
+  posts ~monthly, but currently taking a break
   {{- if .Description }}
   <div class="post-description">
     {{ .Description }}
