--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,7 +8,7 @@
 <header class="page-header">
   {{- partial "breadcrumbs.html" . }}
   <h1>Blog</h1>
-  posts ~monthly, but currently taking a break
+  ~taking a break~
   {{- if .Description }}
   <div class="post-description">
     {{ .Description }}
