--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,6 +8,7 @@
 <header class="page-header">
   {{- partial "breadcrumbs.html" . }}
   <h1>Blog</h1>
+  <p>~on an indefinite hiatus~</p>
   {{- if .Description }}
   <div class="post-description">
     {{ .Description }}
